# python-template

./: README.md  cookiecutter.json
{{cookiecutter.dir_name}}/: Makefile  pyproject.toml
