[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.package_description}}"
authors = ["Shunta Komatsu <shuntak217@gmail.com>"]

[tool.poetry.dependencies]
python = "{{cookiecutter.python_version}}"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
isort = "^4.3.21"
mypy = "^0.782"
pytest = "^5.4.3"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
